--- a/3-поиск_всех_элементов_по_селектору.html
+++ b/3-поиск_всех_элементов_по_селектору.html
@@ -30,6 +30,12 @@
 
     <script>
 
+        'use script';
+        let link = document.querySelectorAll('a');
+        link = document.getElementsByClassName('card-link');
+
+        console.log(link);
+
     </script>
 </body>
 
