--- a/3-поиск_всех_элементов_по_селектору.html
+++ b/3-поиск_всех_элементов_по_селектору.html
@@ -31,8 +31,8 @@
     <script>
 
         'use script';
-        let link = document.querySelectorAll('a');
-        link = document.getElementsByClassName('card-link');
+
+        let link = document.querySelectorAll("div.card>div.card-body a");
 
         console.log(link);
 
