--- a/4-поиск_одного_элемента_по_селектору.html
+++ b/4-поиск_одного_элемента_по_селектору.html
@@ -29,6 +29,12 @@
 
     <script>
 
+      'use strict';
+
+      let valuenow = document.querySelectorAll("div.progress>div[aria-valuenow='50'] ");
+
+      console.log(valuenow);
+
     </script>
 </body>
 
