--- a/5-название_вкладки.html
+++ b/5-название_вкладки.html
@@ -9,7 +9,15 @@
     <!-- Задание. Выведите содержимое тега title в консоль. -->
 
     <script>
-        
+
+        'use strict';
+
+        let name = document.querySelector('html');
+        name = document.querySelector('title');
+
+        console.log(name);
+        console.dir(name);
+
     </script>
 </body>
 </html>
